--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -32,67 +32,66 @@
                     </div>
                     <ul class="side-nav-menu scrollable">
 
-                        <li class="nav-item dropdown">
-                            <a class="dropdown-toggle" href="javascript:void(0);">
+                        <li class="nav-item active">
+                            <a href="/Admin">
                                 <span class="icon-holder">
                                     <i uk-icon="home"></i>
                                 </span>
                                 <span class="title">داشبورد</span>
-                                <span class="arrow" uk-icon="chevron-forward">
-                                </span>
                             </a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item active">
-                                    <a href="/Admin/Package/Order">
-                                        <span class="icon-holder">
-                                            <i uk-icon="basket"></i>
-                                        </span>
-                                        <span class="title">سفارشات</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a href="/Admin/Package">
-                                        <span class="icon-holder">
-                                            <i uk-icon="cube"></i>
-                                        </span>
-                                        <span class="title">لیست پکیج ها</span>
-                                    </a>
-                                </li>
-                            </ul>
                         </li>
-
+                        <li class="nav-item active">
+                            <a href="/Admin/Category">
+                                <span class="icon-holder">
+                                    <i uk-icon="file-tray-stacked"></i>
+                                </span>
+                                <span class="title">دسته بندی</span>
+                            </a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle" href="javascript:void(0);">
                                 <span class="icon-holder">
-                                    <i uk-icon="grid"></i>
+                                    <i uk-icon="cube"></i>
                                 </span>
-                                <span class="title">پکیج ها</span>
+                                <span class="title">محصولات</span>
                                 <span class="arrow" uk-icon="chevron-forward">
                                 </span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item active">
-                                    <a href="/Admin/Package/Order">
+                                    <a href="/Admin/Product">
                                         <span class="icon-holder">
-                                            <i uk-icon="basket"></i>
+                                            <i uk-icon="list"></i>
                                         </span>
-                                        <span class="title">سفارشات</span>
+                                        <span class="title">لیست</span>
                                     </a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a href="/Admin/Package">
+                                    <a href="/Admin/Product/Create">
                                         <span class="icon-holder">
-                                            <i uk-icon="cube"></i>
+                                            <i uk-icon="add"></i>
                                         </span>
-                                        <span class="title">لیست پکیج ها</span>
+                                        <span class="title">افزودن محصول</span>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                   
-                   
-
-
+                        <li class="nav-item active">
+                            <a href="/Admin/Comment">
+                                <span class="icon-holder">
+                                    <i uk-icon="chatbubble-ellipses"></i>
+                                </span>
+                                <span class="title">نظرات</span>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="/Admin/BannerAndSlide">
+                                <span class="icon-holder">
+                                    <i uk-icon="images"></i>
+                                </span>
+                                <span class="title">بنر و اسلایدر</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
