Product Page Progress

--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -213,12 +213,12 @@
     </div>
 </form>
 
-<div class="mat-card uk-padding-remove">
+<div class="questions mat-card uk-padding-remove">
     <h3 class="mat-pad">
         پاسخ به سوالات شما
     </h3>
     <hr class="uk-margin-remove" />
-    <div class="mat-pad">
+    <div>
         <ul uk-accordion class="uk-margin-remove-top">
             <li>
                 <a class="uk-accordion-title" href="#">این یک سوال می باشد</a>
