--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -65,15 +65,24 @@
     </div>
     <div role="none" class="space-nav-header gap-b"></div>
 
-    <div class="m uk-container">
-        <main class="m-content">
+    <!-- Single means the layout has only one Column -->
+    @if (ViewData["Single"] == null)
+    {
+        <div class="m uk-container">
+            <main class="m-content">
+                @RenderBody()
+            </main>
+            <aside class="m-aside">
+                @RenderSection("Aside", false)
+            </aside>
+        </div>
+    }
+    else if (ViewData["Single"] != null)
+    {
+        <div class="uk-container">
             @RenderBody()
-        </main>
-        <aside class="m-aside">
-            @RenderSection("Aside", false)
-        </aside>
-    </div>
-
+        </div>
+    }
 
     <footer>
         <div class="uk-container col uk-light">
@@ -145,7 +154,7 @@
             </div>
             <hr class="uk-margin-medium-top" />
             <p class="uk-text-center text-4">
-                کلیه حقوق این مطعلق به شرکت قصر موبایل می باشد، طراحی و توسعه توسط
+                کلیه حقوق این متعلق به شرکت قصر موبایل می باشد، طراحی و توسعه توسط
                 <strong><a href="https://arvintavco.com">شرکت ایده پرداز آروین تاو</a></strong>
             </p>
         </div>
