--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -125,3 +125,8 @@ backdrop-filter: saturate(80%);
 
 .service .body {
   display: grid; }
+
+.questions ul li {
+  padding: 12px;
+  margin-top: 0 !important;
+  border-bottom: solid #e9e9e9 1px; }
