--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -166,8 +166,9 @@
 <script src="/AdminStaticFile/Bootstrap/js/bootstrap.min.js"></script>
 <script src="/AdminStaticFile/Bootstrap/js/bootstrap.bundle.js"></script>
 <script src="/AdminStaticFile/Bootstrap/js/bootstrap.bundle.min.js"></script>
-@*<script src="~/UIKit/js/Global.js"></script>*@
 <script src="~/js/uikit.min.js"></script>
 <script src="~/js/uikit-icons.js"></script>
 <link href="~/AdminStaticFile/DataPicker/jquery.md.bootstrap.datetimepicker.style.css" rel="stylesheet" />
 <script src="~/AdminStaticFile/script.js"></script>
+
+@RenderSection("Script", false)
