--- a/GhasreMobile/Areas/Admin/Views/Category/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Category/Index.cshtml
@@ -53,3 +53,11 @@
         </div>
     </div>
 </div>
+
+@section Script{ 
+    <script>
+        $("#Create").click("/Admin/Catagory/Create/0", function (result) {
+
+        });
+    </script>
+}
