Search Page, Forum, Blogs, -Account Progress

--- a/GhasreMobile/Views/Product/Index.cshtml
+++ b/GhasreMobile/Views/Product/Index.cshtml
@@ -11,7 +11,6 @@
 
 }
 
-
 <nav class="breadcrumb">
     <a href="">کالا</a>
     <a href="">هواوی</a>
@@ -97,41 +96,41 @@
     </div>
     <div class="pr-content col">
         <div class="body">
-            
+
         </div>
         <div class="price">
-            <h4>
+            <h4 class="discount">
                 4,200,000
             </h4>
-            <h3>
+            <h3 class="actual">
                 4,100,000
-                <span>تومان</span>
+                <span class="t">تومان</span>
             </h3>
         </div>
         <div class="colours">
             <h4>رنگ بندی</h4>
-            <ul>
+            <ul class="grid">
                 <li>
                     <div class="clr">
                         <span>سفید</span>
-                        <span></span>
+                        <strong style="background-color: #E0E0E0"></strong>
                     </div>
                 </li>
                 <li>
                     <div class="clr">
                         <span>طلایی</span>
-                        <span></span>
+                        <strong style="background-color: #f3cc14"></strong>
                     </div>
                 </li>
                 <li>
                     <div class="clr">
                         <span>نقره ای</span>
-                        <span></span>
+                        <strong style="background-color: #bababa"></strong>
                     </div>
                 </li>
             </ul>
         </div>
-        <div class="cart">
+        <div class="cart uk-margin-top">
             <div class="counter rowr">
                 <button class="plus" uk-icon="add"></button>
                 <span class="count">
@@ -148,4 +147,164 @@
     <div class="pr-specs">
 
     </div>
+</div>
+
+<nav class="section-nav">
+    <a href="">بررسی تخصصی</a>
+    <a href="">جزئیات فنی</a>
+    <a href="">نظر خریداران محصول</a>
+</nav>
+
+<div class="mat-card gap-t">
+    <h3 dir="rtl">نقد و بررسی هواوی Lite M5 MediaPad 8</h3>
+    <p>
+        تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است. از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برن
+    </p>
+</div>
+
+<div class="details col mat-card gap-t">
+    <h3 dir="rtl">جزئیات فنی</h3>
+    <table dir="rtl">
+        <tbody>
+            <tr>
+                <td>ابعاد</td>
+                <td>7.9x73.6x158.5 میلی‌متر</td>
+            </tr>
+            <tr>
+                <td>توضیحات سیم کارت</td>
+                <td>سایز نانو   8.8 × 12.3 میلی‌متر</td>
+            </tr>
+            <tr>
+                <td>وزن</td>
+                <td>172 گرم</td>
+            </tr>
+            <tr>
+                <td>ساختار بدنه</td>
+                <td>قاب جلو شیشه + قاب پشت و فریم پلاستیکی</td>
+            </tr>
+            <tr>
+                <td>ویژگی‌های خاص</td>
+                <td>مجهز به حس‌گر اثرانگشت , فبلت , مناسب عکاسی , مناسب عکاسی سلفی</td>
+            </tr>
+            <tr>
+                <td>تعداد سیم کارت</td>
+                <td>دو سیم کارت</td>
+            </tr>
+            <tr>
+                <td>زمان معرفی</td>
+                <td>12 دسامبر 2019</td>
+            </tr>
+            <tr>
+                <td>تراشه</td>
+                <td>Exynos 9611 CPU</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="mat-card gap-t">
+    <h4>
+        نظر شما
+    </h4>
+    <div class="fg-col uk-margin-small-top">
+        <textarea class="entry"></textarea>
+        <div class="rowr uk-margin-small-top">
+            <button class="btn btn-dashed uk-margin-auto-top">ثبت نظر</button>
+            <div class="row star-container uk-margin-auto-right">
+                <span class="star-cb-group">
+                    <input type="radio" id="rating-5" name="Raiting" value="5" /><label for="rating-5">5</label>
+                    <input type="radio" id="rating-4" name="Raiting" value="4" checked="checked" /><label for="rating-4">4</label>
+                    <input type="radio" id="rating-3" name="Raiting" value="3" /><label for="rating-3">3</label>
+                    <input type="radio" id="rating-2" name="Raiting" value="2" /><label for="rating-2">2</label>
+                    <input type="radio" id="rating-1" name="Raiting" value="1" /><label for="rating-1">1</label>
+                    <input type="radio" id="rating-0" name="Raiting" value="0" class="star-cb-clear" /><label for="rating-0">0</label>
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="comment-section mat-card gap-t">
+    <h3>نظرات کاربران</h3>
+    <ul>
+        <li>
+            <div class="comment col">
+                <div class="rowr">
+                    <h5 class="text-2">مهتاب دادسرشت</h5>
+                    <label class="text-4 uk-margin-auto-right">3 روز پیش</label>
+                </div>
+                <p>
+                    از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
+                </p>
+                <div class="actions">
+                    @*<a href="" uk-tooltip="لایک کردن" class="gap-l" uk-icon="heart-outline"></a>*@
+                    @*<a href="" uk-tooltip="ثبت پاسخ" class="" uk-icon="arrow-redo"></a>*@
+                    @*<a href="" uk-tooltip="گزارش" class="uk-margin-auto-right" uk-icon="megaphone"></a>*@
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="comment col">
+                <div class="rowr">
+                    <h5 class="text-2">مهتاب دادسرشت</h5>
+                    <label class="text-4 uk-margin-auto-right">3 روز پیش</label>
+                </div>
+                <p>
+                    از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
+                </p>
+                <div class="actions">
+                    @*<a href="" uk-tooltip="لایک کردن" class="gap-l" uk-icon="heart-outline"></a>*@
+                    @*<a href="" uk-tooltip="ثبت پاسخ" class="" uk-icon="arrow-redo"></a>*@
+                    @*<a href="" uk-tooltip="گزارش" class="uk-margin-auto-right" uk-icon="megaphone"></a>*@
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="comment col">
+                <div class="rowr">
+                    <h5 class="text-2">مهتاب دادسرشت</h5>
+                    <label class="text-4 uk-margin-auto-right">3 روز پیش</label>
+                </div>
+                <p>
+                    از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
+                </p>
+                <div class="actions">
+                    @*<a href="" uk-tooltip="لایک کردن" class="gap-l" uk-icon="heart-outline"></a>*@
+                    @*<a href="" uk-tooltip="ثبت پاسخ" class="" uk-icon="arrow-redo"></a>*@
+                    @*<a href="" uk-tooltip="گزارش" class="uk-margin-auto-right" uk-icon="megaphone"></a>*@
+                </div>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<div class="product-slider gap-t uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
+
+    <div class="title">
+        <a href="#" class="dot-container">
+            <img src="~/st/v/dot.svg" alt="" class="dot" />
+            <h3>محصولات مرتبط</h3>
+        </a>
+    </div>
+
+    <ul class="uk-slider-items">
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+    </ul>
+
+    <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+
 </div>
