--- a/GhasreMobile/Views/Shared/_ProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ProductBlock.cshtml
@@ -4,7 +4,7 @@
 
 <div class="product">
     <div class="star-container" uk-tooltip="">
-        <div class="Stars" style="--rating: 5;"></div>
+        <div class="Stars" style="--rating: @r.Next(0,5)"></div>
     </div>
     <span class="people">(2445)</span>
     <a href="#" class="link-text">
@@ -12,7 +12,7 @@
     </a>
     <a href="#" class="link-text">
         <h3 class="name" dir="rtl">
-            گوشی موبایل Iphone X دو سیمکارته
+            گوشی موبایل Iphone X دو سیمکارته 256gb پلاس 7 گیگ رم
         </h3>
     </a>
     <a href="" class="category link-text">دسته بندی</a>
