--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 }
 
-@section Aside{ 
+@section Aside{
     <div class="categories">
         <ul>
             <li>
@@ -70,7 +70,7 @@
 
 </div>
 
-<div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="sets: true">
+<div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
 
     <div class="title">
         <a href="#" class="dot-container">
@@ -98,7 +98,7 @@
 
 </div>
 
-<div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="sets: true">
+<div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
 
     <div class="title">
         <a href="#" class="dot-container">
@@ -135,7 +135,7 @@
 
 </div>
 
-<div class="mat-card uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="sets: true">
+<div class="mat-card uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
 
     <div class="title gap-b">
         <a href="#" class="dot-container">
@@ -241,11 +241,6 @@
         </ul>
     </div>
 </div>
-
-<div class="space-double"></div>
-<div class="space-double"></div>
-<div class="space-double"></div>
-
 
 @section Scripts{
 
