--- a/GhasreMobile/wwwroot/css/pages/product.css
+++ b/GhasreMobile/wwwroot/css/pages/product.css
@@ -73,7 +73,12 @@ backdrop-filter: saturate(80%);
   grid-template-columns: 180px 2fr 1.1fr;
   grid-template-rows: 92px auto;
   grid-template-areas: "title title image" "specs content image";
-  grid-gap: 8px; }
+  grid-gap: 8px;
+  z-index: 10;
+  -moz-border-radius: 4px 4px 0 0;
+  -webkit-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+  position: relative; }
   .pr-image {
     grid-area: image; }
     .pr-image .head .fractional {
@@ -141,7 +146,56 @@ backdrop-filter: saturate(80%);
     grid-area: title; }
   .pr-content {
     grid-area: content;
-    min-height: 150px; }
+    min-height: 150px;
+    grid-gap: 8px; }
+    .pr-content .colours {
+      display: flex;
+      flex-direction: column; }
+      .pr-content .colours .grid {
+        margin-top: 6px;
+        display: flex;
+        flex-direction: row-reverse;
+        grid-gap: 10px;
+        -ms-flex-wrap: wrap;
+        -webkit-flex-wrap: wrap;
+        flex-wrap: wrap; }
+        .pr-content .colours .grid li .clr {
+          border: 1px solid #e9e9e9;
+          padding: 6px 8px;
+          display: flex;
+          flex-direction: row;
+          -moz-border-radius: 4px 4px 4px 4px;
+          -webkit-border-radius: 4px 4px 4px 4px;
+          border-radius: 4px 4px 4px 4px; }
+          .pr-content .colours .grid li .clr span {
+            color: #666;
+            font-size: 12px; }
+          .pr-content .colours .grid li .clr strong {
+            width: 18px;
+            height: 18px;
+            margin-left: 6px;
+            -moz-border-radius: 1000px 1000px 1000px 1000px;
+            -webkit-border-radius: 1000px 1000px 1000px 1000px;
+            border-radius: 1000px 1000px 1000px 1000px; }
+    .pr-content .price {
+      display: flex;
+      flex-direction: column; }
+      .pr-content .price .discount {
+        color: #FF5A64;
+        text-decoration: line-through;
+        font-size: 20px; }
+      .pr-content .price .actual {
+        display: flex;
+        flex-direction: row-reverse;
+        color: #333;
+        font-size: 24px;
+        margin-top: 0px; }
+        .pr-content .price .actual .t {
+          color: #333;
+          font-size: 13px;
+          margin-top: auto;
+          margin-bottom: 5px;
+          margin-right: 4px; }
   .pr-specs {
     background-color: transparent;
     grid-area: specs;
@@ -200,3 +254,58 @@ backdrop-filter: saturate(80%);
     -moz-border-radius: 6px 0 0 6px;
     -webkit-border-radius: 6px 0 0 6px;
     border-radius: 6px 0 0 6px; }
+
+.section-nav {
+  position: relative;
+  background-color: #F5F5F5;
+  border: 1px #ddd solid;
+  -moz-border-radius: 0 0 4px 4px;
+  -webkit-border-radius: 0 0 4px 4px;
+  border-radius: 0 0 4px 4px;
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: -1px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
+  z-index: 5; }
+  .section-nav a {
+    color: #666;
+    padding: 12px;
+    border-left: 1px #ddd solid;
+    -moz-transition: all ease 0.2s;
+    -o-transition: all ease 0.2s;
+    -webkit-transition: all ease 0.2s;
+    transition: all ease 0.2s; }
+  .section-nav a:hover {
+    color: #96027E; }
+
+.details table {
+  margin: 0;
+  margin-top: 8px;
+  border-spacing: 8px; }
+  .details table tbody tr td {
+    padding: 8px;
+    -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius: 3px 3px 3px 3px;
+    border-radius: 3px 3px 3px 3px; }
+  .details table tbody tr td:first-child {
+    background-color: #F4F4F4; }
+  .details table tbody tr td:last-child {
+    background-color: #F9F9F9; }
+
+@media only screen and (min-width: 1200px) {
+  .product-slider .uk-slider-items li {
+    width: 25%; } }
+
+@media only screen and (min-width: 960px) and (max-width: 1200px) {
+  .product-slider .uk-slider-items li {
+    width: 33.33%; } }
+
+@media only screen and (min-width: 864px) and (max-width: 960px) {
+  .product-slider .uk-slider-items li {
+    width: 50%; } }
+
+@media only screen and (max-width: 864px) {
+  .product-slider .uk-slider-items li {
+    width: 50%; } }
