--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -130,3 +130,72 @@ backdrop-filter: saturate(80%);
   padding: 12px;
   margin-top: 0 !important;
   border-bottom: solid #e9e9e9 1px; }
+
+.main-contact {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 12px; }
+  .main-contact .left {
+    display: flex;
+    flex-direction: column;
+    grid-gap: 12px; }
+    .main-contact .left .sellers ul {
+      display: grid;
+      display: grid;
+      grid-template-rows: auto;
+      grid-gap: 12px;
+      grid-template-columns: repeat(auto-fit, minmax(132px, 1fr));
+      direction: rtl; }
+      .main-contact .left .sellers ul li {
+        direction: ltr;
+        padding: 8px;
+        background-color: #f8f8f8;
+        -moz-border-radius: 4px 4px 4px 4px;
+        -webkit-border-radius: 4px 4px 4px 4px;
+        border-radius: 4px 4px 4px 4px;
+        display: flex;
+        flex-direction: column;
+        grid-gap: 4px; }
+        .main-contact .left .sellers ul li label {
+          font-size: 13px;
+          color: #666; }
+        .main-contact .left .sellers ul li span {
+          color: #333;
+          font-size: 16px; }
+  .main-contact .right {
+    display: flex;
+    flex-direction: column;
+    grid-gap: 12px; }
+    .main-contact .right .telegram, .main-contact .right .instagram {
+      -moz-border-radius: 4px 4px 4px 4px;
+      -webkit-border-radius: 4px 4px 4px 4px;
+      border-radius: 4px 4px 4px 4px;
+      overflow: hidden; }
+      .main-contact .right .telegram img, .main-contact .right .instagram img {
+        width: 100%;
+        height: auto; }
+
+@media only screen and (max-width: 724px) {
+  .main-contact {
+    grid-template-columns: 1fr; } }
+
+.gallery-main {
+  display: grid;
+  grid-template-rows: auto;
+  grid-gap: 12px;
+  grid-template-columns: repeat(auto-fit, minmax(224px, 1fr)); }
+  .gallery-main a {
+    height: 100%;
+    width: 100%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    -ms-align-content: center;
+    -webkit-align-content: center;
+    align-content: center; }
+    .gallery-main a img {
+      margin: auto;
+      -o-object-fit: cover;
+      object-fit: cover;
+      -o-object-position: center;
+      object-position: center; }
