--- a/GhasreMobile/wwwroot/css/pages/index.scss
+++ b/GhasreMobile/wwwroot/css/pages/index.scss
@@ -64,3 +64,82 @@
         }
     }
 }
+
+.main-contact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 12px;
+
+    .left {
+        @include column;
+        grid-gap: 12px;
+
+        .sellers {
+            ul {
+                display: grid;
+                @include grid-gap(132px,12px);
+                direction: rtl;
+
+                li {
+                    direction: ltr;
+                    padding: 8px;
+                    background-color: #f8f8f8;
+                    @include border-def-radius;
+                    @include column;
+                    grid-gap: 4px;
+
+                    label {
+                        font-size: 13px;
+                        color: $Text-2;
+                    }
+
+                    span {
+                        color: $Text;
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
+
+    .right {
+        @include column;
+        grid-gap: 12px;
+
+        .telegram, .instagram {
+            @include border-def-radius;
+            overflow: hidden;
+
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 724px) {
+
+    .main-contact {
+        grid-template-columns: 1fr;
+    }
+}
+
+.gallery-main {
+    @include grid-gap(224px,12px);
+
+    a {
+        height: 100%;
+        width: 100%;
+        background-color: #fff;
+        @include column;
+        -ms-align-content: center;
+        -webkit-align-content: center;
+        align-content: center;
+
+        img {
+            margin: auto;
+            @include obj;
+        }
+    }
+}
